--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -61,13 +61,13 @@
                         <outlet property="logInButton" destination="YDE-83-nlL" id="jET-aR-6j5"/>
                         <outlet property="registerButton" destination="0Xi-9Y-JV3" id="xx6-mA-dMx"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="startToLoginSegue" id="ScB-5s-Ct3"/>
-                        <segue destination="TVx-yg-1e8" kind="show" identifier="startToHomeSegue" id="4YU-rn-3QO"/>
+                        <segue destination="zZu-Tq-nOT" kind="show" identifier="startToHomeSegue" id="4YU-rn-3QO"/>
                         <segue destination="Q0P-fd-Jdg" kind="show" identifier="startToRegisterSegue" id="GOj-34-Pew"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5q0-49-lNO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-749.60000000000002" y="102.99850074962519"/>
+            <point key="canvasLocation" x="-1745" y="-881"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -172,12 +172,12 @@
                         <outlet property="loginEmailTextField" destination="f7R-p7-QHj" id="zMy-Dk-jF6"/>
                         <outlet property="loginPasswordTextField" destination="lYA-QE-gPZ" id="T4i-0A-Yir"/>
                         <segue destination="Q0P-fd-Jdg" kind="show" identifier="toRegisterSegue" id="bcT-yV-Wuq"/>
-                        <segue destination="TVx-yg-1e8" kind="show" identifier="loginToHomeSegue" id="wub-pM-hWT"/>
+                        <segue destination="zZu-Tq-nOT" kind="show" identifier="loginToHomeSegue" id="wub-pM-hWT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="164" y="-489"/>
+            <point key="canvasLocation" x="-1232" y="-1658"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="KHS-n1-KDk">
@@ -268,12 +268,12 @@
                         <outlet property="emailTextField" destination="5ao-AY-M4u" id="TXd-rZ-gh1"/>
                         <outlet property="passwordTextField" destination="nam-8Q-edu" id="Y2r-Qa-LKf"/>
                         <outlet property="userNameTextField" destination="DyK-Oa-6Q7" id="ENK-cR-2B2"/>
-                        <segue destination="TVx-yg-1e8" kind="show" identifier="RegisterToHomeSegue" id="n17-Rb-B2k"/>
+                        <segue destination="zZu-Tq-nOT" kind="show" identifier="RegisterToHomeSegue" id="n17-Rb-B2k"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gls-dl-QLq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="164" y="636"/>
+            <point key="canvasLocation" x="-1233" y="44"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="DBZ-sK-4Qe">
@@ -285,10 +285,47 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Hu0-qa-Osr"/>
                     </view>
+                    <navigationItem key="navigationItem" id="ifl-Bp-omZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QmQ-rb-qch" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1817" y="103"/>
+            <point key="canvasLocation" x="1433" y="-805"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="w9y-UK-G4z">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5Vu-dS-R5x" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="YW4-jW-kt5"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5rn-uD-ogg">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TVx-yg-1e8" kind="relationship" relationship="rootViewController" id="xc2-74-E6H"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FDP-pU-FHE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="867" y="-804"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="mFa-lT-uaO">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="zZu-Tq-nOT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Fb5-tj-9mT">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="5Vu-dS-R5x" kind="relationship" relationship="viewControllers" id="lqS-WE-6Ph"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aF1-aG-AGE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="238" y="-803"/>
         </scene>
     </scenes>
     <resources>
@@ -297,6 +334,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4YU-rn-3QO"/>
-        <segue reference="GOj-34-Pew"/>
+        <segue reference="bcT-yV-Wuq"/>
     </inferredMetricsTieBreakers>
 </document>
