--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -346,59 +346,102 @@
             <objects>
                 <viewController id="TVx-yg-1e8" customClass="HomeViewController" customModule="UnderConstructionApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KnH-Bt-m3H">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hfu-Pj-23J">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="275"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Yx-ZQ-zw7">
+                                <rect key="frame" x="0.0" y="20" width="375" height="931"/>
                                 <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8do-2W-1vK">
-                                        <rect key="frame" x="8" y="11" width="359" height="249"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arP-Lr-xmX">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3py-mY-T8k">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="187.5"/>
+                                                <subviews>
+                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uXK-D8-men">
+                                                        <rect key="frame" x="18" y="30" width="338" height="147"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2x3-gs-BfF">
+                                                            <size key="itemSize" width="338" height="147"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                        </collectionViewFlowLayout>
+                                                        <cells>
+                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bannerCell" id="HbK-TV-Z2q" customClass="BannerCollectionViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
+                                                                <rect key="frame" x="0.0" y="0.0" width="338" height="147"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="338" height="147"/>
+                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                    <subviews>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="28N-LA-eCN">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="338" height="147"/>
+                                                                        </imageView>
+                                                                    </subviews>
+                                                                </view>
+                                                                <constraints>
+                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="width" secondItem="HbK-TV-Z2q" secondAttribute="width" id="2nh-gQ-Yfk"/>
+                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="top" secondItem="HbK-TV-Z2q" secondAttribute="top" id="Odz-xa-brb"/>
+                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="leading" secondItem="HbK-TV-Z2q" secondAttribute="leading" id="XT0-HC-8q5"/>
+                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="height" secondItem="HbK-TV-Z2q" secondAttribute="height" id="xrS-2B-d5d"/>
+                                                                </constraints>
+                                                                <connections>
+                                                                    <outlet property="bannerImage" destination="28N-LA-eCN" id="vhy-cj-9cA"/>
+                                                                </connections>
+                                                            </collectionViewCell>
+                                                        </cells>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="TVx-yg-1e8" id="3fT-nr-PUA"/>
+                                                            <outlet property="delegate" destination="TVx-yg-1e8" id="0kj-5V-Spz"/>
+                                                        </connections>
+                                                    </collectionView>
+                                                </subviews>
+                                                <color key="backgroundColor" red="1" green="0.86274509799999999" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="3py-mY-T8k" secondAttribute="height" multiplier="2:1" id="Xqs-Vh-sx2"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fsD-AE-gb6">
-                                            <size key="itemSize" width="359" height="226"/>
-                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        </collectionViewFlowLayout>
-                                        <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bannerCell" id="1BI-y7-kwS" customClass="BannerCollectionViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="359" height="226"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="226"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JCK-cc-A9l">
-                                                            <rect key="frame" x="6" y="7" width="346" height="210"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        </imageView>
-                                                    </subviews>
-                                                </view>
-                                                <connections>
-                                                    <outlet property="bannerImage" destination="JCK-cc-A9l" id="TuP-Ue-Cez"/>
-                                                </connections>
-                                            </collectionViewCell>
-                                        </cells>
-                                    </collectionView>
+                                        <constraints>
+                                            <constraint firstItem="3py-mY-T8k" firstAttribute="leading" secondItem="arP-Lr-xmX" secondAttribute="leading" id="1jS-tk-x8b"/>
+                                            <constraint firstAttribute="trailing" secondItem="3py-mY-T8k" secondAttribute="trailing" id="F4R-iG-w7n"/>
+                                            <constraint firstItem="3py-mY-T8k" firstAttribute="width" secondItem="arP-Lr-xmX" secondAttribute="width" id="aM8-tR-LZU"/>
+                                            <constraint firstAttribute="height" constant="1000" id="x7L-WL-bWu"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.86274509799999999" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="arP-Lr-xmX" secondAttribute="trailing" id="4TE-e1-Chc"/>
+                                    <constraint firstItem="arP-Lr-xmX" firstAttribute="leading" secondItem="4Yx-ZQ-zw7" secondAttribute="leading" id="6ev-Xe-RE7"/>
+                                    <constraint firstItem="arP-Lr-xmX" firstAttribute="top" secondItem="4Yx-ZQ-zw7" secondAttribute="top" id="Asu-an-6EP"/>
+                                    <constraint firstAttribute="bottom" secondItem="arP-Lr-xmX" secondAttribute="bottom" id="DB7-X9-YRR"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="arP-Lr-xmX" firstAttribute="width" secondItem="KnH-Bt-m3H" secondAttribute="width" id="5R8-iK-IOq"/>
+                            <constraint firstItem="4Yx-ZQ-zw7" firstAttribute="top" secondItem="Hu0-qa-Osr" secondAttribute="top" id="ehz-fV-VKz"/>
+                            <constraint firstItem="4Yx-ZQ-zw7" firstAttribute="leading" secondItem="Hu0-qa-Osr" secondAttribute="leading" id="k4p-en-GLq"/>
+                            <constraint firstItem="Hu0-qa-Osr" firstAttribute="top" secondItem="3py-mY-T8k" secondAttribute="top" id="l3q-yQ-jWT"/>
+                            <constraint firstItem="Hu0-qa-Osr" firstAttribute="trailing" secondItem="4Yx-ZQ-zw7" secondAttribute="trailing" id="p02-1h-XgC"/>
+                            <constraint firstItem="Hu0-qa-Osr" firstAttribute="bottom" secondItem="4Yx-ZQ-zw7" secondAttribute="bottom" id="rNV-E1-3OP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Hu0-qa-Osr"/>
                     </view>
                     <navigationItem key="navigationItem" id="ifl-Bp-omZ"/>
+                    <size key="freeformSize" width="375" height="1000"/>
                     <connections>
-                        <outlet property="backYellowView" destination="Hfu-Pj-23J" id="2ss-7t-mua"/>
-                        <outlet property="bannerColletionView" destination="8do-2W-1vK" id="Z0Z-Hr-xYb"/>
+                        <outlet property="backYellowView" destination="3py-mY-T8k" id="9fa-mN-j0S"/>
+                        <outlet property="bannerColletionView" destination="uXK-D8-men" id="sdZ-fl-hWL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QmQ-rb-qch" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1677.5999999999999" y="-805.54722638680664"/>
+            <point key="canvasLocation" x="1948" y="-1112.743628185907"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="cnl-yG-syi">
@@ -472,6 +515,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="zZu-Tq-nOT" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Fb5-tj-9mT">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
